2012-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a minor version number. Official release 15.1.0.
	- fixed an incorrect help message.

	* qt4/main.cpp:
	- updated the copyright message.

	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	- updated autoconf macro

	* qt4/image_save_dialog.cpp:
	- fixed a compiler warning

2011-08-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main.cpp:
	- set "C" to the global locale.

2011-05-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* NEWS:
	- updated a major version number. Official release 15.0.0.

	* rcsslogplayer/Makefile.am:
	- updated a library major version number.

	* qt4/main.cpp:
	- updated a copyright message.

	* Makefile.am:
	* configure.ac:
	* qt4/Makefile.am:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/types.cpp:
	* rcsslogplayer/types.h:
	- supported a new parameter of rcssserver-15
	- disabled classic logplayer.
	- disabled glwidget by default.

2010-04-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	- updated autoconf macros.

2010-01-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main.cpp:
	- updated the copyright message.

2009-12-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsslogplayer.pro:
	- fixed an illegal variable name.

2009-12-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	- updated M4 macro files.

2009-11-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* qt4/qt4.pro:
	- updated point version. Official release 14.0.1.

	* qt4/detail_dialog.cpp:
	* qt4/detail_dialog.h:
	* qt4/disp_holder.cpp:
	* qt4/options.cpp:
	* qt4/player_painter.cpp:
	* qt4/player_type_dialog.cpp:
	- fixed catch model.

2009-11-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* qt4/qt4.pro: